# pytest-qgis

./: .copyright-header.txt  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
src/pytest_qgis/: __init__.py  _version.py  mock_qgis_classes.py  pytest_qgis.py  qgis_bot.py  qgis_interface.py  utils.py
tests/: conftest.py  test_ini.py  test_layer_cleanup.py  test_mock_qgis_classes.py  test_pytest_qgis.py  test_qgis_bot.py  test_qgis_interface.py  test_utils.py  utils.py
tests/visual/: __init__.py  test_qgis_ui.py  test_show_map.py
